# Rust_Practice

./: .gitignore  Cargo.toml  README.md
VisFlowLogger/Server/: Cargo.toml
VisFlowLogger/Server/migrations/: 1_tables_postgres.sql
VisFlowLogger/Server/src/: main.rs
VisFlowLogger/Server/src/core/: mod.rs
VisFlowLogger/Server/src/core/persistence/: mod.rs
VisFlowLogger/Server/src/core/persistence/api/repositories/: mod.rs
VisFlowLogger/Server/src/core/shared/models/: mod.rs
VisFlowLogger/Server/src/core/shared/models/vis_flow_log/: mod.rs
VisFlowLogger/Server/src/core/web/: mod.rs
VisFlowLogger/Server/src/core/web/api/models/: mod.rs
VisFlowLogger/Server/src/core/web/application/handlers/: mod.rs
VisFlowLogger/Server/src/core/web/application/routes/: mod.rs
VisFlowLogger/Server/src/database/: mod.rs
VisFlowLogger/Server/src/routes/: mod.rs
VisFlowLogger/Server/src/server/: mod.rs  route.rs
VisFlowLogger/Server/src/server/models/: app_state.rs  mod.rs
VisFlowLogger/Server/src/server/models/payload/: mod.rs  save_logs_payload.rs
VisFlowLogger/Server/src/services/: mod.rs
VisFlowLogger/Server/src/services/diagram_generator/: mod.rs
VisFlowLogger/Server/src/services/graph_generator/: mod.rs
VisFlowLogger/Server/src/services/graph_generator/internal/: mod.rs
VisFlowLogger/Server/src/services/persistence/: mod.rs
VisFlowLogger/Server/src/services/persistence/api/: mod.rs
VisFlowLogger/Server/src/utils/: constants.rs  converter.rs  mod.rs
VisFlowLogger/Server/src/web/: mod.rs
VisFlowLogger/Server/src/web/application/routes/: mod.rs
(+100 files in other folders)
